--- a/package.json
+++ b/package.json
@@ -4,16 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "tsc",
+    "start": "node ./dist/app.js",
+    "start:dev": "tsc-watch --onSuccess \"npm start\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "routing-controllers": "^0.7.7"
+    "mongodb": "^3.2.7",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.7.7",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.2"
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.5",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongodb": "^3.1.28",
+    "@types/node": "^12.0.8",
+    "dotenv": "^8.0.0",
+    "tsc-watch": "^2.2.1",
+    "typescript": "^3.5.2"
   }
 }
