--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "typedi": "^0.8.0"
@@ -28,6 +29,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongodb": "^3.1.28",
     "@types/node": "^12.0.8",
+    "@types/redis": "^2.8.13",
     "dotenv": "^8.0.0",
     "tsc-watch": "^2.2.1",
     "typescript": "^3.5.2"
